2015-08-04 v1.1-30
  + add royalredgrayblue and royalbluegrayred
  + plotPCA: the xlim/ylim parameters are automatically adjusted when text labels are appended

2015-03-13 v1.1-29
  + compactPar is now more flexible to accept parameters and to pass them to par

2015-02-03 v1.1-28
  + fix bug in heat function: return (n)

2015-01-06 v1.1-26
  + add compactTrellis() and setCompactTrellis() to simplify preparing compact figures for publications
  + add function p2asterisk to map p values to conventionally used asterisk symbols of p-values
  + use roxygen2 to manage documentation

2014-07-30 v1.1-25
  + Add function fcbrewer to handle factor-matching colors
  + Improved manual pages
  + sqlayout is renamed into squareLayout
  + Rename compPar to compactPar

2014-07-01 v1.1-24
  + biosHeatmap: the cex main size is now better guessed. The multiply factor is set to 2 at least.

2014-04-28 v1.1-23
  + Add intRange (integer range) and squareLayout (square matrix layout of plots)
  + pdf2png now runs on UDIS machine (rbaus024) as well

2014-04-22 v1.1-22
  + add histMat to visualize matrices with histograms
  + add plotPCA

2014-01-28 v1.1-20
  + Add two histogram related functions: qHist for drawing histogram with quantile lines; xclipHist draws qHist with clipped x values by quantile filtering.

2014-01-23 v1.1-19
  + Add ribiosUtils to the dependency list of ribiosPlot

2014-01-22 v1.1-18
  + add pdf2png to convert arbitrary PDF files to PNG

2013-08-19 v1.1-17
  + Add new 3-color comb: cyanblackyellow and yellowbackyan 
  + add jitter.xyplot

2013-07-22 v1.1-16
  + brewer.pal.factor automatically adjusts the size of color palettes according to the input factor and the maxcolor information provided by brewer.pal.info
  + PCA plotting functions have been refactored

2013-02-22 v1.1-15